--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "start": "node ./.erb/scripts/check-port-in-use.js && npm run start:renderer",
     "start:main": "cross-env NODE_ENV=development electron  ./src/main/main.js",
     "start:renderer": "cross-env NODE_ENV=development webpack serve --config ./.erb/configs/webpack.config.renderer.dev.js",
-    "test": "jest"
+    "test": "jest",
+    "archive":"git archive --format=zip --output archieve/latest.zip"
   },
   "build": {
     "productName": "myApp",
@@ -136,8 +137,8 @@
     "@types/enzyme-adapter-react-16": "^1.0.6",
     "@types/history": "4.7.9",
     "@types/jest": "^27.0.1",
-    "@types/node": "16.9.2",
-    "@types/react": "^17.0.21",
+    "@types/node": "16.9.4",
+    "@types/react": "^17.0.22",
     "@types/react-dom": "^17.0.9",
     "@types/react-router": "^5.1.16",
     "@types/react-router-dom": "^5.1.9",
@@ -148,7 +149,7 @@
     "chalk": "^4.1.2",
     "concurrently": "^6.2.1",
     "cross-env": "^7.0.3",
-    "css-loader": "^6.2.0",
+    "css-loader": "^6.3.0",
     "css-minimizer-webpack-plugin": "^3.0.2",
     "detect-port": "^1.3.0",
     "electron-builder": "^22.14.2",
@@ -160,7 +161,7 @@
     "eslint": "^7.32.0",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-plugin-jest": "^24.4.2",
-    "eslint-plugin-react": "^7.25.2",
+    "eslint-plugin-react": "^7.25.3",
     "eslint-plugin-react-hooks": "^4.2.0",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.3.2",
