--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "start:main": "cross-env NODE_ENV=development electron  ./src/main/main.js",
     "start:renderer": "cross-env NODE_ENV=development webpack serve --config ./.erb/configs/webpack.config.renderer.dev.js",
     "test": "jest",
-    "archive":"git archive --format=zip --output archieve/latest.zip"
+    "archive": "git archive --format=zip --output=archive/latest.zip main",
+    "git":"node .erb/scripts/check-git-status.js"
   },
   "build": {
     "productName": "myApp",
@@ -169,6 +170,7 @@
     "jest": "^27.2.0",
     "lint-staged": "^11.1.2",
     "mini-css-extract-plugin": "^2.3.0",
+    "nodegit": "^0.27.0",
     "prettier": "^2.4.1",
     "react-refresh": "^0.10.0",
     "react-test-renderer": "^17.0.2",
