--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build:renderer": "cross-env NODE_ENV=production webpack --config ./.erb/configs/webpack.config.renderer.prod.js",
     "rebuild": "electron-rebuild --parallel --types prod,dev,optional",
     "lint": "cross-env NODE_ENV=development eslint . --cache --ext .js,.jsx,.ts,.tsx",
-    "package": "node ./.erb/scripts/clean.js build && npm run build && electron-builder build --publish always",
+    "package": "node ./.erb/scripts/clean.js build && npm run build && electron-builder build --publish never",
     "postinstall": "node .erb/scripts/check-native-dep.js && electron-builder install-app-deps && cross-env NODE_ENV=development webpack --config ./.erb/configs/webpack.config.renderer.dev.dll.js",
     "start": "node ./.erb/scripts/check-port-in-use.js && npm run start:renderer",
     "start:main": "cross-env NODE_ENV=development electron  ./src/main/main.js",
@@ -167,7 +167,7 @@
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.3.2",
     "identity-obj-proxy": "^3.0.0",
-    "jest": "^27.2.0",
+    "jest": "^27.2.1",
     "lint-staged": "^11.1.2",
     "mini-css-extract-plugin": "^2.3.0",
     "nodegit": "^0.27.0",
@@ -194,8 +194,7 @@
     "history": "5.x.x",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-router-dom": "^5.3.0",
-    "regenerator-runtime": "^0.13.9"
+    "react-router-dom": "^5.3.0"
   },
   "devEngines": {
     "node": ">=14.x",
