--- a/package.json
+++ b/package.json
@@ -1,21 +1,24 @@
 {
   "name": "my-template",
   "productName": "my-template",
+  "version": "1.2.1",
   "description": "Electron application boilerplate based on React, React Router, Webpack, React Fast Refresh for rapid application development",
   "scripts": {
     "build": "node ./.erb/scripts/clean.js dist && concurrently npm:build:main npm:build:renderer",
     "build:main": "cross-env NODE_ENV=production webpack --config ./.erb/configs/webpack.config.main.prod.js",
     "build:renderer": "cross-env NODE_ENV=production webpack --config ./.erb/configs/webpack.config.renderer.prod.js",
+    "build:dll":"cross-env NODE_ENV=development webpack --config ./.erb/configs/webpack.config.renderer.dev.dll.js",
     "rebuild": "electron-rebuild --parallel --types prod,dev,optional",
     "lint": "cross-env NODE_ENV=development eslint . --cache --ext .js,.jsx,.ts,.tsx",
     "package": "node ./.erb/scripts/clean.js build && npm run build && electron-builder build --publish never",
+    "publish": "node ./.erb/scripts/clean.js build && npm run build && electron-builder build --publish always",
     "postinstall": "node .erb/scripts/check-native-dep.js && electron-builder install-app-deps && cross-env NODE_ENV=development webpack --config ./.erb/configs/webpack.config.renderer.dev.dll.js",
     "start": "node ./.erb/scripts/check-port-in-use.js && npm run start:renderer",
     "start:main": "cross-env NODE_ENV=development electron  ./src/main/main.js",
     "start:renderer": "cross-env NODE_ENV=development webpack serve --config ./.erb/configs/webpack.config.renderer.dev.js",
     "test": "jest",
     "archive": "git archive --format=zip --output=archive/latest.zip main",
-    "git":"node .erb/scripts/check-git-status.js"
+    "git": "node .erb/scripts/check-git-status.js"
   },
   "build": {
     "productName": "myApp",
@@ -71,7 +74,7 @@
     "publish": {
       "provider": "github",
       "owner": "kevinwang930",
-      "repo": "electron-react-boilerplate"
+      "repo": "myTemplate"
     }
   },
   "repository": {
@@ -171,6 +174,7 @@
     "lint-staged": "^11.1.2",
     "mini-css-extract-plugin": "^2.3.0",
     "nodegit": "^0.27.0",
+    "postcss-loader": "^6.1.1",
     "prettier": "^2.4.1",
     "react-refresh": "^0.10.0",
     "react-test-renderer": "^17.0.2",
@@ -178,6 +182,7 @@
     "sass": "^1.41.1",
     "sass-loader": "^12.1.0",
     "style-loader": "^3.2.1",
+    "tailwindcss": "^2.2.15",
     "terser-webpack-plugin": "^5.2.4",
     "url-loader": "^4.1.1",
     "webpack": "^5.53.0",
