--- a/back/src/main/resources/application.properties
+++ b/back/src/main/resources/application.properties
@@ -10,4 +10,4 @@ server.address=0.0.0.0
 
 # data source
 spring.datasource.url=jdbc:mysql://root:123456@localhost:3306/demo
-spring.liquibase.change-log=classpath*:liquibase/changelog.xml
+#spring.liquibase.change-log=classpath*:liquibase/changelog.xml
