--- a/front-vue/package.json
+++ b/front-vue/package.json
@@ -13,9 +13,11 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "hls.js": "^1.5.8",
     "pinia": "^2.1.7",
     "vue": "^3.4.21",
-    "vue-router": "^4.3.0"
+    "vue-router": "^4.3.0",
+    "vue3-video-play": "^1.3.2"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.8.0",
