--- a/vue-home/package.json
+++ b/vue-home/package.json
@@ -11,8 +11,15 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "axios": "^1.6.8",
+    "element-plus": "^2.7.2",
+    "file-saver": "^2.0.5",
     "hls.js": "^1.5.8",
+    "js-cookie": "^3.0.5",
+    "jsencrypt": "^3.3.2",
+    "nprogress": "^0.2.0",
     "pinia": "^2.1.7",
+    "sass": "^1.76.0",
     "vue": "^3.4.21",
     "vue-router": "^4.3.0"
   },
