--- a/back/src/main/resources/application.properties
+++ b/back/src/main/resources/application.properties
@@ -9,5 +9,6 @@ server.address=0.0.0.0
 #spring.security.oauth2.client.registration.github.client-secret=47a068f40c8c357747c26fa7222152d49cae63de
 
 # data source
-spring.datasource.url=jdbc:mysql://root:123456@localhost:3306/demo
+#spring.datasource.url=jdbc:mysql://root@localhost:3306/demo
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 #spring.liquibase.change-log=classpath*:liquibase/changelog.xml
