--- a/vue-home/package.json
+++ b/vue-home/package.json
@@ -20,6 +20,7 @@
     "nprogress": "^0.2.0",
     "pinia": "^2.1.7",
     "sass": "^1.76.0",
+    "video.js": "^8.12.0",
     "vue": "^3.4.21",
     "vue-router": "^4.3.0"
   },
