--- a/vue-home/package.json
+++ b/vue-home/package.json
@@ -21,6 +21,7 @@
     "pinia": "^2.1.7",
     "qs": "^6.12.1",
     "sass": "^1.76.0",
+    "socket.io-client": "^4.7.5",
     "streamsaver": "^2.0.6",
     "video.js": "^8.12.0",
     "vue": "^3.4.21",
